# rhoai-custom-research-lab

./: .gitignore  AGENTS.md  LICENSE  Makefile  README.md  compose.yml  pyproject.toml  sample.env
.chainlit/: config.toml
0_setup/: 0_prerequisites.md  1_environment_setup.ipynb  2_model_deployment.ipynb  3_cleanup.ipynb
1_document_processing/: 1_docling_overview.md  2_document_ingestion.ipynb  3_semantic_search.ipynb
2_tool_layer/: 10_dashboard.ipynb  1_mcp_overview.md  2_build_mcp_servers.ipynb  3_test_mcp_tools.ipynb  4_web_search_mcp.ipynb  5_verification_mcp.ipynb  6_llm_as_judge.ipynb  7_threshold_tuning.ipynb  8_trace_collection.ipynb  9_failure_memory.ipynb
3_harness_engineering/: 1_harness_overview.md  2_research_agents.ipynb  3_iterative_orchestrator.ipynb  4_long_transaction.ipynb
4_agent_orchestration/: 1_orchestration_overview.md  2_build_agents.ipynb  2_langgraph_orchestrator.ipynb  3_end_to_end_test.ipynb  3_test_agents_local.ipynb  4_a2a_integration.ipynb  5_orchestrator_agent.ipynb  6_end_to_end_test.ipynb
5_deployment/: 1_deployment_overview.md  2_deploy_kagenti.ipynb  2_deploy_openshift.ipynb  3_verify_deployment.ipynb
6_evaluation/: 1_evaluation_overview.md  2_observability.ipynb  2_run_evaluation.ipynb  3_observability_logql.ipynb  3_tracing_mlflow.ipynb  4_agent_evaluation.ipynb  4_tracing_mlflow.ipynb  5_evaluation_pipeline.ipynb  5_llm_as_judge.ipynb
backend/: Dockerfile  api.py  metrics.py  observability.py  test_sse.py
deploy/: namespace.yaml  secret.yaml
frontend/: Dockerfile  app.py  app_utils.py  chainlit.md  i18n.py
(+93 files in other folders)
