[project]
name = "rhoai-custom-research-lab"
version = "0.1.0"
description = "Custom deep research lab with harness engineering on Red Hat OpenShift AI"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11,<3.14"
dependencies = [
    "kagenti-adk>=0.8.0",
    "langgraph>=0.4.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.3.0",
    "langchain-community>=0.3.0",
    "docling>=2.100.0",
    "pgvector>=0.3.0",
    "psycopg2-binary>=2.9.0",
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.30.0",
    "chainlit>=2.11.0",
    "fastapi>=0.138.0",
    "uvicorn>=0.34.0",
    "httpx>=0.28.0",
    "aiohttp>=3.14.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.18",
    "minio>=7.2.0",
    "pydantic>=2.10.0",
    "onnxruntime>=1.20.0",
    "openai>=1.0.0",
    "mcp>=1.8.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.29.0",
    "prometheus-client>=0.20.0",
    "prometheus-fastapi-instrumentator>=7.0.0",
    "mlflow>=2.15.0",
]

[project.optional-dependencies]
mcp = [
    "mcp>=1.8.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agents", "harness", "mcp_servers", "backend"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
